--- a/Animated Navbar using HTML and CSS/index.html
+++ b/Animated Navbar using HTML and CSS/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class="navbar">
-      <h2>Geeks Help</h2>
+      <h2>Silver Lining</h2>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
