--- a/travel web design/index.html
+++ b/travel web design/index.html
@@ -8,5 +8,24 @@
     <title>Travel Website</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar">
+            <div class="container nav-wrapper">
+                <a href="#" class="logo">Tour<span>avel</span></a>
+                <div class="menu-wrapper">
+                    <ul class="menu">
+                        <li class="menu-item"><a href="#" class="menu-link active">Home</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link">Services</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link">Pricing</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link">About us</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link">Contact</a></li>
+                    </ul>
+                    <a href="#" class="btn-member">Member area</a>
+                
+            </div>
+        </nav>
+
+    </header>
+  </body>
 </html>
