--- a/LandingPageRisjadStore/index.html
+++ b/LandingPageRisjadStore/index.html
@@ -49,6 +49,12 @@
         <div class="social-media">
           <ul>
             <li>
+              <img
+                src="/img/undraw_Developer_activity_re_39tg.png"
+                alt="risjad store"
+              />
+            </li>
+            <li>
               <a href="#"><i class="fab fa-youtube"></i></a>
             </li>
             <li>
