--- a/New/Blog Post/index.html
+++ b/New/Blog Post/index.html
@@ -19,6 +19,40 @@
     <div class="content">
       <p class="info">12.31.2050 | <span>ALL ABOUT CSS BLOG</span></p>
       <h2>All About Typography</h2>
+      <p class="headline">
+        Headlines, like this one, are great ways to quickly capture the reader's
+        attention, to give them a sumary, intro, or other important information
+        in a web page. You can use text-transform: uppercase; to make a whole
+        body of text uppercase using CSS if you really need to grab attention!
+      </p>
+      <p>
+        Okay, now that we're done screaming in the headline in all caps (which
+        you should do sparingly) - it's time to chat more about other components
+        of typography. You'll notice that we chose a nice serif font for our
+        headings, and a nice sans-serif font for our body text. This is
+        intentional! Serif font faces are generally considered pretty
+        inaccessible as a body text style, since at smaller sizes it's much more
+        difficult to visually differentiate the characters from one another. At
+        large font sizes, such as those seen in most headings, serif fonts are
+        considered fine, since the larger style makes it easier to see where
+        serif characters start and where they end.
+      </p>
+      <p>
+        But wait! What if you want more than just normal text on your page?
+        Another common thing you might see in web pages are quotes. To make
+        quotes, we can use the blockquote element and style it accordingly, so
+        it stands out a bit as a non-body text quote.
+      </p>
+      <blockquote class="quote">
+        "This is a quote - you probably knew that at a glance since we gave it
+        some nice styling. Pretty nice, huh? A great lesson in User Experience
+        Design, where we take special care to implement our web page in a way
+        that makes it pleasant and intuitive for our users/readers.
+        Differentiating our different typography components visually makes
+        information much more organized and easier to digest for our users."
+        <cite>– A wise person</cite>
+      </blockquote>
+      <hr />
     </div>
   </body>
 </html>
