--- a/New/Blog Post/index.html
+++ b/New/Blog Post/index.html
@@ -15,7 +15,17 @@
     <title>Typography Blog Post</title>
   </head>
   <body>
-    <h1>A Blog Post</h1>
+    <div class="hero">
+      <h1>A Blog Post</h1>
+      <p>
+        Typography is one of the most important elements of front end design and
+        development! In this exercise, we'll play around with some of the common
+        CSS properties to manage and style our fonts by making a nice blog
+        post-like web page.
+      </p>
+      <hr />
+    </div>
+
     <div class="content">
       <p class="info">12.31.2050 | <span>ALL ABOUT CSS BLOG</span></p>
       <h2>All About Typography</h2>
@@ -144,5 +154,14 @@
         may not be responsive or dynamic.
       </p>
     </div>
+    <footer>
+      <ul>
+        <li><a href="#privacy">Privacy Policy </a></li>
+        <li><a href="#terms">Terms & Conditions </a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="#info">More Info</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
