--- a/New/Hazel CV/index.html
+++ b/New/Hazel CV/index.html
@@ -54,5 +54,38 @@
         </div>
       </div>
     </section>
+    <section class="blog-section">
+      <div class="blog-content">
+        <div class="two-column-section">
+          <p>Tech Blog</p>
+          <div class="blog-posts">
+            <p class="blog-heading">This Is Your Brain On Helium</p>
+            <p class="blog-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum,
+              voluptate mollitia voluptates iure harum autem facere aut cum.
+              Dolorem, molestias animi nisi esse quam quo optio! Quidem nobis
+              inventore voluptatum.
+            </p>
+            <p class="blog-date">May 19, 2025</p>
+            <p class="blog-heading">In Search Of Intelligence</p>
+            <p class="blog-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum,
+              voluptate mollitia voluptates iure harum autem facere aut cum.
+              Dolorem, molestias animi nisi esse quam quo optio! Quidem nobis
+              inventore voluptatum.
+            </p>
+            <p class="blog-date">June 12, 2025</p>
+            <p class="blog-heading">Should Public Transit Be Free?</p>
+            <p class="blog-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum,
+              voluptate mollitia voluptates iure harum autem facere aut cum.
+              Dolorem, molestias animi nisi esse quam quo optio! Quidem nobis
+              inventore voluptatum.
+            </p>
+            <p class="blog-date">March 17, 2025</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
