--- a/New/Hazel CV/index.html
+++ b/New/Hazel CV/index.html
@@ -87,5 +87,30 @@
         </div>
       </div>
     </section>
+    <section class="events-section">
+      <div class="events-content">
+        <div class="two-column-section">
+          <p>Speaking Events</p>
+          <div class="events-card">
+            <p class="event-title">NY Economics Forum</p>
+            <p class="event-location">New York, NY</p>
+            <p class="event-date">August 25th 2025, 7:00pm</p>
+            <p class="event-title">Emerging Tech Meet-Up</p>
+            <p class="event-location">San Francisco, CA</p>
+            <p class="event-date">August 25th 2025, 7:00pm</p>
+            <p class="event-title">Creative Code Meetup</p>
+            <p class="event-location">Denver, CO</p>
+            <p class="event-date">August 25th 2025, 7:00pm</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-content">
+        <img src="images/instagram.png" alt="" />
+        <img src="images/twitter.png" alt="" />
+        <p>Made With ❤️</p>
+      </div>
+    </footer>
   </body>
 </html>
