--- a/New/Cost Estimator/index.html
+++ b/New/Cost Estimator/index.html
@@ -18,6 +18,13 @@
 
   <body>
     <h1>Estimate your cost</h1>
-    <div class="container">Test</div>
+    <div class="container">
+      <div class="tabs">
+        <p>Free</p>
+        <p class="active">Team</p>
+        <p>Professional</p>
+        <p>Enterprise</p>
+      </div>
+    </div>
   </body>
 </html>
