--- a/New/Grid/index.html
+++ b/New/Grid/index.html
@@ -1,16 +1,25 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
     <title>Portfolio Site</title>
-</head>
+  </head>
 
-<body>
-
-</body>
-
+  <body>
+    <div class="project">
+      <img src="images/eth.avif" alt="" />
+      <p class="overlay">VIEW PROJECT</p>
+    </div>
+  </body>
 </html>
