Making Hamburger Button Work

--- a/New/Grid/index.html
+++ b/New/Grid/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <script defer src="index.js"></script>
     <title>Portfolio Site</title>
   </head>
 
@@ -34,9 +35,9 @@
           </a>
         </nav>
         <div class="hamburger">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
         </div>
       </header>
       <div class="project-grid">
