text and button styles

--- a/New/Swipe/index.html
+++ b/New/Swipe/index.html
@@ -1,22 +1,47 @@
-<!-- @format -->
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="index.css" />
-    <title>Swipe</title>
-  </head>
 
-  <body>
-    <h1>HEADING 1</h1>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+    <title>Swipe</title>
+</head>
+
+<body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+    <a href="Sadas">Click Me</a>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam expedita voluptates blanditiis, distinctio sed
+        nesciunt quod. Sequi, quasi! Eos sequi non ab in impedit, numquam nulla rem ex beatae quae.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam expedita voluptates blanditiis, distinctio sed
+        nesciunt quod. Sequi, quasi! Eos sequi non ab in impedit, numquam nulla rem ex beatae quae.</p>
+    <p class="secondary-text">LOREM BLAH blah blah</p>
+
+    <p class="subtitle">I am subtitle</p>
+    <p class="subtitle2">I am subtitle</p>
+    <button class="primary-button">Click me!</button>
+    <button class="secondary-button">Click me!</button>
+    <button class="primary-button with-icon">
+        Click me!
+        <img src="assets/arrow-right-light.svg">
+    </button>
+
+    <button class="secondary-button with-icon">
+        Click me!
+        <img src="assets/arrow-right-dark.svg">
+    </button>
+
+</body>
+
 </html>
