--- a/New/Swipe/index.html
+++ b/New/Swipe/index.html
@@ -27,33 +27,47 @@
 
         <button class="primary-button navbar-button">Sign In</button>
     </nav>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
-    <a href="Sadas">Click Me</a>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam expedita voluptates blanditiis, distinctio sed
-        nesciunt quod. Sequi, quasi! Eos sequi non ab in impedit, numquam nulla rem ex beatae quae.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam expedita voluptates blanditiis, distinctio sed
-        nesciunt quod. Sequi, quasi! Eos sequi non ab in impedit, numquam nulla rem ex beatae quae.</p>
-    <p class="secondary-text">LOREM BLAH blah blah</p>
+    <main>
+        <div class="hero">
+            <div class="section-container two-column">
+                <div class="col-left">
+                    <h1>Payments infrastructure for the world</h1>
+                    <p>
+                        Tons of companies all over the world use Swipe’s seamless platform to manage their businesses's
+                        entire financial transaction infrastructure online.
+                    </p>
+                    <div class="button-container">
+                        <button class="primary-button with-icon">
+                            Start now
+                            <img src="assets/arrow-right-light.svg" alt="">
+                        </button>
+                        <button class="secondary-button with-icon">
+                            Contact sales
+                            <img src="assets/arrow-right-purple.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="col-right hero-phone-container">
+                    <img class="hero-phone" src="assets/hero-phone.png" alt="">
+                </div>
+            </div>
+        </div>
 
-    <p class="subtitle">I am subtitle</p>
-    <p class="subtitle2">I am subtitle</p>
-    <button class="primary-button">Click me!</button>
-    <button class="secondary-button">Click me!</button>
-    <button class="primary-button with-icon">
-        Click me!
-        <img src="assets/arrow-right-light.svg">
-    </button>
-
-    <button class="secondary-button with-icon">
-        Click me!
-        <img src="assets/arrow-right-dark.svg">
-    </button>
-
+        <div class="partners-section">
+            <div class="section-container">
+                <div class="partners-grid">
+                    <img src="assets/instacart.png" alt="Instacart">
+                    <img src="assets/salesforce.png" alt="Salesforce">
+                    <img src="assets/amazon.png" alt="Amazon">
+                    <img src="assets/slack.png" alt="Slack">
+                    <img src="assets/shopify.png" alt="Shopify">
+                    <img src="assets/google.png" alt="Google">
+                    <img src="assets/lyft.png" alt="Lyft">
+                    <img src="assets/zoom.png" alt="Zoom">
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
