--- a/New/Swipe/index.html
+++ b/New/Swipe/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar">
         <img src="assets/logo-white.svg" alt="Swipe, inc.">
         <ul class="menu">
@@ -28,6 +29,7 @@
         <button class="primary-button navbar-button">Sign In</button>
     </nav>
     <main>
+        <!-- Hero Section -->
         <div class="hero">
             <div class="section-container two-column">
                 <div class="col-left">
@@ -52,7 +54,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- Partners Section -->
         <div class="partners-section">
             <div class="section-container">
                 <div class="partners-grid">
@@ -67,6 +69,139 @@
                 </div>
             </div>
         </div>
+        <!-- UNIFIED PLATFORM -->
+        <div class="unified-platform-section">
+            <div class="section-container">
+                <p class="subtitle">Unified platform</p>
+                <h2>All the payment products you'll ever need</h2>
+
+                <div class="two-column">
+                    <div class="col-left">
+                        <p>
+                            We've got everything you'll need and more to build websites and
+                            apps that handle payments, payouts, and much more. Swipe’s
+                            products power payments for
+                            <a href="#"> all kinds of retailers</a>,
+                            <a href="#"> all kinds of businesses</a>,
+                            <a href="#"> software platforms & marketplaces</a>, and
+                            everything in between.
+                        </p>
+                    </div>
+                    <div class="col-right">
+                        <p>
+                            We also help companies
+                            <a href="#">tackle fraud</a>, <a href="#">issue invoices</a>,
+                            <a href="#">send virtual and physical cards</a>,
+                            <a href="#">manage financing</a>,
+                            <a href="#">wrangle business spend</a>, and much more.
+                        </p>
+                    </div>
+                </div>
+                <button class="primary-button with-icon">
+                    Start now
+                    <img src="assets/arrow-right-light.svg" alt="">
+                </button>
+            </div>
+        </div>
+
+        <div class="graphic-section">
+            <div class="section-container">
+                <div class="graphic-grid">
+                    <img src="assets/credit-card.png" alt="" id="credit-card">
+                    <img src="assets/slack-invoice.png" alt="" id="slack-invoice">
+                    <img src="assets/phone.png" alt="" id="phone">
+                    <img src="assets/dash.png" alt="" id="dash">
+                </div>
+            </div>
+        </div>
+
+        <!-- INTEGRATIONS SECTION -->
+        <div class="integrations-section">
+            <div class="section-container two-column">
+                <div class="col-left">
+                    <p class="subtitle2">Designed For Engineers</p>
+                    <h2>The world’s best and most intuitive APIs</h2>
+                    <p>We abstract the hard stuff away so your teams don't can focus on building good technology,
+                        instead of spending time and money reinventing the wheel.</p>
+
+                    <button class="primary-button with-icon">
+                        Start now
+                        <img src="assets/arrow-right-dark.svg" alt="">
+                    </button>
+
+                    <div class="card-container">
+                        <div class="card">
+                            <img src="assets/tools-icon.png" alt="" class="icon">
+                            <h3>Tools for all stacks</h3>
+                            <p class="secondary-text">We offer front end and back end libraries in some of the most
+                                widely used technologies, old and new.</p>
+                            <button class="secondary-button with-icon">
+                                See libraries
+                                <img src="assets/arrow-right-blue.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="card">
+                            <img src="assets/cube-icon.png" alt="" class="icon">
+                            <h3>Custom Integrations</h3>
+                            <p class="secondary-text">Use integrations for systems like Shopify, WooCommerce, NetSuite,
+                                and more.</p>
+                            <button class="secondary-button with-icon">
+                                Explore partners
+                                <img src="assets/arrow-right-blue.svg" alt="">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-right">
+                    <img src="assets/api-code.png" alt="" id="api-code">
+                    <img src="assets/terminal-code.png" alt="" id="terminal-code">
+                </div>
+            </div>
+        </div>
+
+        <!-- WHY SWIPE SECTION -->
+        <div class="why-swipe-section">
+            <div class="section-container">
+                <p class="subtitle">Why Swipe</p>
+                <h2>A tech-first approach to finance</h2>
+                <div class="card-container">
+                    <div class="card">
+                        <img src="assets/cloud-icon.png" alt="" class="icon">
+                        <h3>Efficient Always</h3>
+                        <p class="secondary-text">
+                            We've optimized every level of the finance stack, from integrations to prebuilt checkout
+                            flows - no detail has been spared.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/cycle-icon.png" alt="" class="icon">
+                        <h3>Fast-Improving</h3>
+                        <p class="secondary-text">
+                            We make constant updates and improvements to help you stay on the cutting edge of your
+                            industry, deploying to production around 20X per day!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/shield-icon.png" alt="" class="icon">
+                        <h3>Tried and true</h3>
+                        <p class="secondary-text">
+                            Our systems operate with 100% uptime, with scalability and uptime as a guarantee. Swipe is
+                            super duper certified so don't worry
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/bars-icon.png" alt="" class="icon">
+                        <h3>Crazy Optimized</h3>
+                        <p class="secondary-text">
+                            We use machine learning trained on billions of data points to help optimize all products,
+                            from fraud to revenue recovery and more.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </main>
 </body>
 
