The Virtual Events Section

--- a/New/Swipe/index.html
+++ b/New/Swipe/index.html
@@ -103,7 +103,7 @@
                 </button>
             </div>
         </div>
-
+        <!-- GRAPHIC GRID SECTION -->
         <div class="graphic-section">
             <div class="section-container">
                 <div class="graphic-grid">
@@ -201,6 +201,74 @@
             </div>
         </div>
 
+        <div class="global-section">
+            <div class="section-container">
+                <div class="two-column">
+                    <div class="col-left">
+                        <p class="subtitle2">Global scale</p>
+                        <h2>A structure for global businesses</h2>
+                        <p>Swipe makes moving money simple, borderless, and programmable - just like the rest of the
+                            internet. We have teams all over the world and we process billions and billions of dollars
+                            yearly for <a href="#">startups, Fortune 500s, and everything in between.</a></p>
+                    </div>
+                    <div class="col-right">
+                        <img id="globe" src="assets/global-graphic.png" alt="">
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <h3>250M+</h3>
+                        <p class="secondary-text">API requests each day, peaking at 15,000 requests a second.</p>
+                    </div>
+                    <div class="card">
+                        <h3>97%</h3>
+                        <p class="secondary-text">of US adults have bought from businesses that use Swipe</p>
+                    </div>
+                    <div class="card">
+                        <h3>135+</h3>
+                        <p class="secondary-text">currencies and payment methods supported</p>
+                    </div>
+                    <div class="card">
+                        <h3>35+</h3>
+                        <p class="secondary-text">countries with local, acquiring, optimizing acceptance rates</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Virtual Events Section -->
+        <div class="virtual-events-section">
+            <div class="section-container two-column">
+                <div class="col-left">
+                    <p class="subtitle">Virtual events</p>
+                    <h2>Check out Sessions now!</h2>
+                    <p>Swipe Sessions is our annual conference - it's now available to watch on demand! Check it out and
+                        become an "internet economy" genius, and see how Swipe can transform the way you do business
+                        online.</p>
+                    <button class="primary-button with-icon">
+                        Start now
+                        <img src="assets/arrow-right-light.svg">
+                    </button>
+                </div>
+                <div class="col-right">
+                    <div class="swipe-sessions-card">
+                        <div class="card-top">
+                            <img id="sessions-logo" src="assets/swipe-sessions.png" alt="">
+                            <div class="avatars">
+                                <img src="assets/avatar1.png" alt="">
+                                <img src="assets/avatar2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="card-bottom">
+                            <div class="card-content">
+                                <p class="subtitle">Keynote</p>
+                                <p class="secondary-text">Everything you need to know about the internet economy</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 </body>
